# book-processing-toolkit

./: .gitignore  AGENT_UPDATES_EMBEDDED_CHAPTER1.md  CLAUDE.md  CLAUDE_BACKUP.md  CLEANING_AND_PIPELINE_UPDATES.md  DEDUPLICATION_ISSUE_ANALYSIS.md  FOOTNOTE_ARCHITECTURE_EXPLAINED.md  FOOTNOTE_CLEANUP_QUICK_REFERENCE.md  FOOTNOTE_CLEANUP_README.md  FOOTNOTE_DEDUPLICATION_FIXES.md  FOOTNOTE_PROCESSING_STAGES.md  IMPLEMENTATION_PROGRESS.md  NEXT_STEPS_VERIFICATION.md  ORCHESTRATION_IMPLEMENTATION_COMPLETE.md  OUTPUT_FILE_LOCATIONS.md  PIPELINE_ISSUES_ANALYSIS.md  QUICK_REFERENCE_EMBEDDED_CHAPTER.md  REFACTORING_CHECKPOINT.md  clean_input_json.py  pyproject.toml  requirements.txt
ai/: assistant_manager.py
cli/: clean.py  cleanup_character_footnotes.py  structure.py  validate_structure.py
contracts/: __init__.py  node_standards.py
docs/: AI_ASSISTANT_GUIDE.md  BEST_PRACTICES.md  CHARACTER_FOOTNOTE_CLEANUP.md  WEB_UI_TRANSLATION_MANAGER.md  WORKFLOW_NODE_STANDARDS.md
processors/: ai_structure_validator.py  antagonistic_validator.py  book_structure_analyzer.py  book_translator.py  interfaces.py  intro_separator.py  json_cleaner.py  structure_validator.py  toc_mapper.py  translation_config.py  translator.py  volume_manager.py
scripts/: CLEANUP_README.md  README_EMBEDDED_CHAPTER1.md  README_TRANSLATION.md  README_VALIDATION.md  add_english_translations.py  autonomous_test_and_fix.py  batch_process_books.py  batch_translate_works.py  calculate_file_statistics.py  cleanup_test_folders.py  deduplicate_wuxia_glossary.py  demo_glossary_matching.py  demo_glossary_simple.py  (+10 more)
(+132 files in other folders)
